RESOLVED FIXED187190
Reject getUserMedia promise if capture fails
https://bugs.webkit.org/show_bug.cgi?id=187190
Summary Reject getUserMedia promise if capture fails
youenn fablet
Reported 2018-06-29 12:17:29 PDT
Reject getUserMedia promise if capture fails. This might be the case when video capture fails. Currently we do not resolve the promise.
Attachments
Patch (8.15 KB, patch)
2018-06-29 12:39 PDT, youenn fablet
no flags
Archive of layout-test-results from ews106 for mac-sierra-wk2 (3.23 MB, application/zip)
2018-06-29 14:19 PDT, EWS Watchlist
no flags
Patch for landing (7.62 KB, patch)
2018-06-29 15:12 PDT, youenn fablet
no flags
Patch for landing (7.83 KB, patch)
2018-07-01 17:25 PDT, youenn fablet
no flags
Patch for landing - moving capture failed issue first (7.83 KB, patch)
2018-07-02 10:01 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-06-29 12:39:52 PDT
EWS Watchlist
Comment 2 2018-06-29 14:19:53 PDT
Comment on attachment 343932 [details] Patch Attachment 343932 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/8386926 New failing tests: fast/mediastream/get-user-media-device-id.html webrtc/video-mediastreamtrack-stats.html http/tests/media/media-stream/get-user-media-prompt.html
EWS Watchlist
Comment 3 2018-06-29 14:19:55 PDT
Created attachment 343943 [details] Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 4 2018-06-29 15:11:43 PDT
We need to keep the media stream alive for one runloop when iterating over its private observers
youenn fablet
Comment 5 2018-06-29 15:12:58 PDT
Created attachment 343950 [details] Patch for landing
youenn fablet
Comment 6 2018-07-01 17:25:01 PDT
Created attachment 344066 [details] Patch for landing
youenn fablet
Comment 7 2018-07-02 10:01:40 PDT
Created attachment 344110 [details] Patch for landing - moving capture failed issue first
WebKit Commit Bot
Comment 8 2018-07-02 10:29:11 PDT
Comment on attachment 344110 [details] Patch for landing - moving capture failed issue first Clearing flags on attachment: 344110 Committed r233425: <https://trac.webkit.org/changeset/233425>
WebKit Commit Bot
Comment 9 2018-07-02 10:29:12 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2018-07-02 10:31:56 PDT
Note You need to log in before you can comment on or make changes to this bug.